# intro-to-mcps

./: .gitignore  README.md  requirements.txt
development-swarm/: develop.py  utils.py
development-swarm/dev-space/: calc.py  calculator.py  test_calc.py  test_log_2.txt  test_log_4.txt
development-swarm/mcps/: dev_tools.py  file_tools.py  qa_tools.py  run_tools.py
development-swarm/personas/: developer.md  manager.md  tester.md
development-swarm/qa-space/: command_log_tc1.txt  test_output_tc1.txt  test_output_tc2.txt  test_output_tc3.txt
first-steps/: api-reader.py  helloworld.py  os-interactions.py
locallama-swarm/mcps/mcps/: run_tools.py
locallama-swarm/personas/: developer.md  tester.md
vid-2/: main.py  pyproject.toml
vid-3/: main.py  pyproject.toml
vid-3/server/: weather.json  weather.py
